Kubernetes/backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hotel-app
spec:
  selector:
    app: hotel-backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIp
