Kubernetes/frontend-service.yaml
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hotel-app
spec:
  selector:
    app: hotel-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
